--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hola
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My blog</title>
+</head>
+<body>
+    <p>Mi maquetado</p>    
+</body>
+</html>
