--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>My blog</title>
 </head>
 <body>
-    <p>Mi maquetado</p>    
+    <p></p>    
 </body>
+<header>caninos y felinos</header>
+<nav>Servicios Productos Guarderia Promociones</nav>
+<section>
+<article>
+Cuidados y educacion para su perro    
+</article> 
+<article>
+salir de viaje con su mascota    
+</article>   
+</section>
+<section>
+ <aside>solicitar cita medica</aside>   
+</section>
+<footer>Conctactenos linea gratuita Correo
+</footer>
 </html>
